--- a/main.css
+++ b/main.css
@@ -174,6 +174,25 @@ body {
     margin-right: 25em;
 }
 
+@media (max-width: 800px) {
+    .other-suites-para-homepage {
+      max-width: 70%;
+      height: auto;
+      margin: auto;
+    }
+  }
+
+
+  @media (max-width: 800px) {
+    .other-suites-gallery {
+    flex-direction: column;
+    text-align: center;
+      max-width: 70%;
+      height: auto;
+      margin: auto;
+    }
+  }
+
 
 
 
@@ -234,6 +253,15 @@ body {
     margin-right: 120px;
 }
 
+@media (max-width:1000px) {
+    .suites-one-text {
+      max-width: 70%;
+      height: auto;
+      margin: auto;
+    }
+  }
+
+
 .suites-one-text1 {
     background-color: antiquewhite;
 }
@@ -248,15 +276,34 @@ body {
     margin-right: 25em;
 }
 
+@media (max-width:1000px) {
+    .other-suites-para {
+      max-width: 70%;
+      height: auto;
+      margin: auto;
+    }
+  }
+
 .other-suites-gallery {
     display: flex;
     justify-content: center;
     margin-bottom: 2em;
 }
 
+@media (max-width: 800px) {
+    .other-suites-gallery {
+    flex-direction: column;
+    text-align: center;
+      max-width: 70%;
+      height: auto;
+      margin: auto;
+    }
+  }
+
 .other-suites-one {
     margin: 2em;
 }
+
 
 .row-container {
     display: flex;
@@ -628,6 +675,14 @@ body {
 
 }
 
+@media (max-width: 800px) {
+    .location-img {
+      max-width: 70%;
+      height: auto;
+      margin: auto;
+    }
+  }
+
 .google-maps-location-section {
     text-align: center;
     padding-bottom: 5em;
@@ -638,6 +693,15 @@ body {
     padding-right: 5em;
     padding-bottom: 5em;
 }
+
+@media (max-width: 800px) {
+    .transport-info {
+      max-width: 70%;
+      height: auto;
+      margin: auto;
+      text-align: center;
+    }
+  }
 
 
 /*Footer Nav Bar*/
